[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/DistanceAudio.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Music/debug_melody.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/Music/debug_chords.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Music/debug_melody_2.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/AudioTest.gd" type="Script" id=5]

[node name="AudioTest" type="Node"]
script = ExtResource( 5 )

[node name="DistanceAudio" parent="." instance=ExtResource( 1 )]
position = Vector2( 769, 414 )
audio_stream = ExtResource( 3 )

[node name="DistanceAudio2" parent="." instance=ExtResource( 1 )]
position = Vector2( 313, 408 )
audio_stream = ExtResource( 2 )

[node name="DistanceAudio3" parent="." instance=ExtResource( 1 )]
position = Vector2( 545, 86 )
audio_stream = ExtResource( 4 )
